
      The \code{WM_CLASS} should be set in circumstances where the
      Window Manager failed to make use of Xt settings.

      (Contributed by Philip Johnson.)

      \item The \code{"Date"} and \code{"POSIXt"} methods for
      \code{cut()} will accept an unsorted \code{breaks} argument (as
      the default method does, although this was undocumented).
      (Wish of \PR{14961}.)
    }
  }
  
  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item \code{array()} is now implemented in C code, for speed.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item Use of \code{array()} with a 0-length \code{dim} argument is
      deprecated with a warning (and was contrary to the documentation).

      \item Use of \code{tapply()} with a 0-length \code{INDEX} list is
      deprecated with a warning.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, starting \command{Rterm} via \command{R.exe}
      caused Ctrl-C to misbehave.  (\PR{14948})

      \item The \code{tools::latexToUtf8()} function missed conversions that
      were contained within braces.

      \item Long timezone specifications (such as a file name preceded
      by \code{:}) could crash \code{as.POSIXlt}.  (PR#14945.)
      
      \item \code{R CMD build --resave-data} could fail if there was no
      \file{data} directory but there was an \file{R/sysdata.rda} file.
      (PR#14947.)

      \item \code{is.na()} misbehaved on a 0-column data frame.
      (\PR{14959}.)

      \item \code{anova.lmlist()} failed if \code{test} was
      supplied.  (\PR{14960}.)

      It was unable to compute Cp tests for object of class \code{"lm"}
      (it assumed class \code{"glm"}).
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{source()} now uses \code{withVisible()} rather than
      \code{.Internal(eval.with.vis)}.  This sometimes alters tracebacks
      slightly.
